DMP-4215 Trim courthouse and courtroom on entry into DARTS
Added trim to courthouse and courtroom name before attempting to find the entry in DARTS